# Simuran

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  cli.py  codecov.yml  dev-requirements.txt  frozen.txt  print_profile.py  profile_main.bat  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_simuran_temp.py  update_docs.bat
.github/workflows/: simuran-test.yml
docs/: conf.py  getting-started.rst  index.html  index.rst  overview.rst  requirements.txt
docs/html/simuran/: base_class.html  base_signal.html  containers.html  default_params.html  experiment.html  index.html  lfp.html  param_creator.html  param_handler.html  recording.html  recording_container.html  single_unit.html  spatial.html
docs\html/simuran/: base_class.html  base_signal.html  batch_setup.html  containers.html  param_handler.html
docs\html/simuran/analysis/: index.html  lfp_analysis.html
examples/: ATNx_CA1_LFP.ipynb  attrs_to_save.py  batch_setup.py  burst_analysis.py  cell_group_ophys_allen.py  cell_group_ophys_allen_clean.py  cell_group_ophys_allen_small.py  compare_filters.py  ecephys.ipynb  example.nwb  example_params.py  explore_allen.ipynb  function_args.py  function_list.py  index_axona_files.py  interactive-ophys.py  load_nwb.py  musc_params.py  nc_params.py  new_main.py  ophys.ipynb  ophys.py  re_filter_examples.py  simuran_axona.py  single_axona_recording.py  summarise_ophys_allen.py  time_resolved_analysis.py  utils.py
examples/params/: simuran_batch_params.py  simuran_fn_params.py
examples/simuran_control_examples/: main_container.py
main/: batch.py  batch_main.py  main.py  merge.py
old_examples/: ATNx_CA1_LFP.ipynb  explore_allen.ipynb  index_axona_files.py  interactive-ophys.py  new_main.py  ophys.py  utils.py
profiling/: print_profile.py  profile_main.bat
simuran/: __init__.py  base_class.py  base_container.py  base_signal.py  batch_setup.py  cli.py  config_handler.py  containers.py  default_params.py  eeg.py  experiment.py  lfp.py  log_handler.py  main.py  old_code.py  param_creator.py  param_handler.py  recording.py  recording_container.py  single_unit.py  spatial.py  table.py
simuran/analysis/: __init__.py  analysis_handler.py  lfp_analysis.py  per_cell_template.py  run_analysis.py  time_resolved_analysis.py  unit.py
simuran/bridges/: __init__.py  allen_vbn_bridge.py  ibl_wide_bridge.py  mne_bridge.py  neo_bridge.py  neurochat_bridge.py
simuran/converters/: __init__.py  mne_converter.py  neurochat_converter.py
simuran/core/: base_class.py  base_container.py  base_signal.py  eeg.py  log_handler.py  param_handler.py  utils.py
simuran/loaders/: __init__.py  allen_loader.py  base_loader.py  loader_list.py  nc_loader.py  neurochat_loader.py  nwb_loader.py  one_loader.py
simuran/main/: __init__.py  batch_main.py  copy_params.py  doit.py  main.py  main_from_template.py  merge.py  new_main.py  single_main.py  table.py  tableconvert.py
simuran/params/: default_batch_params.py  default_fn_params.py  simuran_base_params.py  simuran_batch_params.py  simuran_fn_params.py  simuran_multi_params.py
simuran/plot/: __init__.py  base_plot.py  figure.py  lfp_plot.py  signal.py  unit.py
simuran/plotting/: plot.py
simuran/ui/: __init__.py  common.py  example_node.py  node.py  node_elements.py  node_factories.py  simuran_ui.py  ui_demo.py
simuran_control/: main.py  main_batch.py  main_container.py
simuran_control_examples/: main.py  main_batch.py  main_container.py
src/simuran/: eeg.py  recording.py
tests/: test_analysis.py  test_base_class.py  test_base_container.py  test_batch.py  test_experiment.py  test_generic_container.py  test_loaders.py  test_logging.py  test_neurochat.py  test_nwb.py  test_parameters.py  test_plot.py  test_recording.py  test_recording_container.py  test_signals.py
(+51 files in other folders)
