[metadata]
name = simuran
url = https://github.com/seankmartin/SIMURAN
download_url = https://github.com/seankmartin/SIMURAN
license = GNU GPL
license_file = LICENSE
description = Simultaneous Multi-region Analysis supported with a network style
long_description = file: README.md
long_description_content_type = text/markdown
author = Sean K. Martin
author_email = martins7@tcd.ie
project_urls = 
    Bug Tracker = https://github.com/seankmartin/SIMURAN/issues
    Documentation = https://simuran.readthedocs.io
classifiers =
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Windows
keywords = neuroscience, network, gui, api
version = 0.0.1

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    matplotlib >= 3.0.2
    numpy >= 1.15.0
    skm_pyutils
    seaborn
    indexed
    tqdm
    mne
    rich
    dearpygui
    pillow
    typer
    click-spinner

[options.package_data]
* = *.txt, *.rst

[options.extras_require]
neurochat = 
    neurochat
    astropy
tests = 
    %(neurochat)s
    pytest
    pytest-cov
    codecov
    coverage[toml]
    pynwb
docs =
    sphinx
    sphinxcontrib-apidoc
    sphinx_rtd_theme
    pygments

[options.entry_points]
console_scripts = 
    simuran = simuran.ui.simuran_ui:cli_entry
