[metadata]
name = simuran
url = https://github.com/seankmartin/SIMURAN
download_url = https://github.com/seankmartin/SIMURAN
license = GNU GPL
license_file = LICENSE
description = Simultaneous Multi-region Analysis supported with a network style
long_description = file: README.md
long_description_content_type = text/markdown
author = Sean K. Martin
author_email = martins7@tcd.ie
project_urls = 
    Bug Tracker = https://github.com/seankmartin/SIMURAN/issues
    Documentation = https://simuran.readthedocs.io
classifiers =
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
keywords = neuroscience, network, gui, api
version = 23.08.0

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy >= 1.15.0
    skm_pyutils
    seaborn
    indexed
    tqdm
    mne
    rich
    dearpygui >= 1.9.0
    typer
    click-spinner
    mpire

[options.package_data]
* = *.txt, *.rst

[options.extras_require]
neurochat = 
    neurochat
tests = 
    %(neurochat)s
    pytest
    pytest-cov
    coverage[toml]
    pynwb
docs =
    sphinx
    sphinxcontrib-apidoc
    sphinx_rtd_theme
    pygments

[options.entry_points]
console_scripts = 
    simuran = simuran.ui.simuran_ui:cli_entry
